--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <title>Annotator test</title>
 
-    <link rel="stylesheet" type="text/css" href="project/css/w2ui-1.5.rc1.min.css"/>
+    <link rel="stylesheet" type="text/css" href="project/css/w2ui-1.5.min.css"/>
 
     <link rel="stylesheet" href="project/css/all.css">
+
+    <script src="project/js/external/rhill-voronoi-core.js"></script>
 
     <script src="project/js/external/jquery.min.js"></script>
     <script src="project/js/external/openseadragon.min.js"></script>
     <script src="project/js/external/paper-full.min.js"></script>
     <script src="project/js/external/openseadragon-paperjs-overlay.js"></script>
     <script src="project/js/external/openseadragon-scalebar.js"></script>
-    <script src="project/js/external/w2ui-1.5.rc1.min.js"></script>
+    <script src="project/js/external/w2ui-1.5.min.js"></script>
 
     <script src="project/js/sampleMetadata.js"></script>
+    <script src="project/js/tools/debugTools.js"></script>
     <script src="project/js/tools/configTools.js"></script>
     <script src="project/js/tools/osdTools.js"></script>
     <script src="project/js/tools/annotationTools.js"></script>
@@ -25,41 +28,18 @@
     <script src="project/js/hierarchy.js"></script>
 
 </head>
-<body>
+<body style='margin:0;padding:0;font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;'>
 
-<div id="annotator" style="width: 99vw; height:95vh;"></div>
+<div id="annotator" style="width: 100vw; height:100vh;"></div>
+
+<script src="project/js/manualStart.js"></script>
 
 <script>
-    var annotator = null;
-    window.onload = function () {
-        Annotator.init({
-            userConfig: {
-                hierarchyStyles: {
-                    'Clasto': {
-                        fillColor: 'red',
-                    },
-                    'Cemento': {
-                        fillColor: 'yellow',
-                    },
-                    'Poro': {
-                        fillColor: 'blue',
-                    },
-                    'Matriz': {
-                        fillColor: 'green',
-                    },
-                }
-            }
-        });
-
-        Annotator.startAnnotations("username", hierarchy);
-        // Annotator.loadAnnotations({{ json_data }})
-    }
-
     window.onresize = function () {
         Annotator.overlay.resize();
         Annotator.overlay.resizecanvas();
     };
-
 </script>
+
 </body>
 </html>
